--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,19 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default Suite</th></tr>
-<tr><td><a href="#t0">SaucedemoProject3</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,742</td><td></td><td></td></tr>
+<tr><th colspan="8">All Test Suite</th></tr>
+<tr><td><a href="#t0">C:/Users/Admin/IdeaProjects/SaucedemoProject3</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">46,075</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SaucedemoProject3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Tests.TestCase</td><td><a href="#m0">RegisterUser</a></td><td rowspan="1">1696175092846</td><td rowspan="1">3790</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">C:/Users/Admin/IdeaProjects/SaucedemoProject3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="9">Tests.TestCase</td><td><a href="#m0">AboutPageFunctionality</a></td><td rowspan="1">1696274424330</td><td rowspan="1">25619</td></tr><tr class="passedeven"><td><a href="#m1">AddAndRemoveProductAgainAddProduct</a></td><td rowspan="1">1696274449951</td><td rowspan="1">1510</td></tr><tr class="passedeven"><td><a href="#m2">LoginWithAddAndRemoveMultipleProduct</a></td><td rowspan="1">1696274420272</td><td rowspan="1">1219</td></tr><tr class="passedeven"><td><a href="#m3">LoginWithOrderMultipleProduct</a></td><td rowspan="1">1696274418361</td><td rowspan="1">1909</td></tr><tr class="passedeven"><td><a href="#m4">LoginWithOrderSingleProduct</a></td><td rowspan="1">1696274416034</td><td rowspan="1">2326</td></tr><tr class="passedeven"><td><a href="#m5">VerifyAtoZSorting</a></td><td rowspan="1">1696274421493</td><td rowspan="1">891</td></tr><tr class="passedeven"><td><a href="#m6">VerifyLoginAndLogOut</a></td><td rowspan="1">1696274413279</td><td rowspan="1">2750</td></tr><tr class="passedeven"><td><a href="#m7">VerifyResetAppState</a></td><td rowspan="1">1696274423264</td><td rowspan="1">1064</td></tr><tr class="passedeven"><td><a href="#m8">VerifyZtoASorting</a></td><td rowspan="1">1696274422385</td><td rowspan="1">878</td></tr></tbody>
 </table>
-<h2>SaucedemoProject3</h2><h3 id="m0">Tests.TestCase#RegisterUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>C:/Users/Admin/IdeaProjects/SaucedemoProject3</h2><h3 id="m0">Tests.TestCase#AboutPageFunctionality</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Tests.TestCase#AddAndRemoveProductAgainAddProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Tests.TestCase#LoginWithAddAndRemoveMultipleProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Tests.TestCase#LoginWithOrderMultipleProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Tests.TestCase#LoginWithOrderSingleProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Tests.TestCase#VerifyAtoZSorting</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">Tests.TestCase#VerifyLoginAndLogOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Tests.TestCase#VerifyResetAppState</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">Tests.TestCase#VerifyZtoASorting</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
